# mahmoudimus.com

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pelicanconf-site.py  pelicanconf.py  pelicansettings.py  press-backlog.md  publishconf.py  pyproject.toml  setup.cfg  topics.txt
.circleci/: config.yml
blog/: Makefile  arbitrary-stack-trace-in-python.rst  developing-a-nose-test-plugin-to-time-python-tests.rst  ggrcnotes.txt  local-introspection.md  pelicanconf.py  python-2-6-4-and-twisted-9-on-os-x-10-6-snow-leopard.rst  requirements.pip  topics.txt
content/: a-new-year-a-new-beginning.rst  a-pythonic-n-wise-iterator-for-any-iterable.rst  an-efficient-parallelizable-record-linkage-implementation.rst  arbitrary-stack-trace-in-python.rst  being-open.rst  csv-handling-with-python-part-ii.rst  developing-a-nose-test-plugin-to-time-python-tests.rst  favorite-unix-timesaving-one-liners.rst  handling-module-level-logging-when-forking.rst  nested-defaultdict-creator.rst  netcat-file-sharing-and-fast-intranet-file-transfers.rst  pexpect-a-neat-little-wrapper-around-unix-expect-for-interative-automation.rst  proper-resources-and-controller-interaction-part-i.rst  properly-setting-up-fixtures.rst  python-2-6-4-and-twisted-9-on-os-x-10-6-snow-leopard.rst  python-and-the-option-meta-key-problem.rst  python-bisect-module-for-memory-efficient-file-searching.rst  pythons-builtin-wsgi-request-handler-and-logging.rst  reading-and-writing-null-terminated-csv-files-in-python.rst  runtime-application-configuration-via-java-management-extensions-jmx.rst  transitive-closure-of-graph-edges.rst  using-emacs-and-ropemode-for-editing-python.rst  verifying-python64-builds.rst
docs/: blogmark-template.md
plugins/: rst_gist.py
src/: cli.py  pelicanconf-blog.py  pelicanconf-landing.py  tasks.py  (+1 more)
(+85 files in other folders)
