[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahmoudimus-blog"
version = "0.1.0"
description = "mahmoud abdelkader's weblog"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Mahmoud Abdelkader", email = "mabdelkader@gmail.com"}
]
dependencies = [
    "pelican",
    "invoke",
    "jinja2",
    "pygments",
    "docutils",
    "cmarkgfm", # not pycmarkgfm
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plugins = ["*.py"]
themes = ["*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[project.scripts]
blog-build = "tasks:build"
blog-serve = "tasks:serve"
blog-publish = "tasks:publish" 