[metadata]
name = mahmoudimus-blog
version = 0.1.0
description = "mahmoud abdelkader's weblog"
long_description = file: README.md
long_description_content_type = text/markdown
author = Mahmoud Abdelkader
author_email = mabdelkader@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.rst, *.md, *.txt, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico
plugins = *.py
themes = *

[options.entry_points]
console_scripts =
    blog-build = tasks:build
    blog-serve = tasks:serve
    blog-publish = tasks:publish 